--- a/playbook.yml
+++ b/playbook.yml
@@ -14,3 +14,5 @@
         name:
           - django
           - djangorestframework
+    - name: Iniciando projeto
+      shell: 'cd /home/ubuntu/myserver;. venv/bin/activate; django-admin startproject setup .'
