--- a/env/dev/playbook.yml
+++ b/env/dev/playbook.yml
@@ -8,22 +8,37 @@
           - nodejs
         update_cache: true
       become: true
-    - name: Instalando dependência com pip (Django & Django Rest Framework)
+    - name: Git Clone
+      git:
+        repo: https://github.com/alura-cursos/clientes-leo-api.git
+        dest: /home/ubuntu/myserver
+        version: master
+        force: yes
+    - name: Instalando dependencias com o pip
       pip:
         virtualenv: /home/ubuntu/myserver/venv
-        name:
-          - django
-          - djangorestframework
-    - name: Verificando se projeto já existe
-      stat:
-        path: /home/ubuntu/myserver/setup/settings.py
-      register: projeto_existe
-    - name: Iniciando projeto
-      shell: 'cd /home/ubuntu/myserver;. venv/bin/activate; django-admin startproject setup .'
-      when: not projeto_existe.stat.exists
+        requirements: /home/ubuntu/myserver/requirements.txt
+        state: present
     - name: Alterando hosts permitidos
       lineinfile:
         path: /home/ubuntu/myserver/setup/settings.py
         regexp: '^ALLOWED_HOSTS'
         line: 'ALLOWED_HOSTS = ["*"]'
         backrefs: true
+    - name: Configurando base de dados
+      shell: |
+        cd /home/ubuntu/myserver
+        . venv/bin/activate
+        python manage.py migrate
+    - name: Carregando dados
+      shell: |
+        cd /home/ubuntu/myserver
+        . venv/bin/activate
+        python manage.py loaddata clientes.json
+    - name: Iniciando Server
+      shell: |
+        . /home/ubuntu/myserver/venv/bin/activate
+        nohup python /home/ubuntu/myserver/manage.py runserver 0.0.0.0:8000 > logs.out &
+    - name: Finalizando
+      debug:
+        msg: "Finalizado"
